# color

./: LICENSE.md  Makefile  README.md  color.cabal
benchmark/: Bench.hs  ColorBench.hs
lib/: Color.hs
tests/: ColorSpec.hs
