name: color
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 Tom Savage <tcsavage@gmail.com>
maintainer: Tom Savage <tcsavage@gmail.com>
synopsis: TODO
description:
    TODO
category: TODO
author: Tom Savage <tcsavage@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
    README.md

library
    exposed-modules:
        Color
    build-depends:
        base ==4.*,
        linear,
        lens
    default-language: Haskell2010
    hs-source-dirs: lib
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        color -any,
        linear,
        hspec ==2.*,
        HUnit -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        ColorSpec
    ghc-options: -Wall -Werror
--test-suite examples
--    type: exitcode-stdio-1.0
--    main-is: DocTest.hs
--    build-depends:
--        base -any,
--        Glob ==0.7.*,
--        doctest ==0.9.*
--    default-language: Haskell2010
--    hs-source-dirs: tests
--    ghc-options: -Wall -Werror

--benchmark benchmarks
--
--    if impl(ghc >=7.8)
--        build-depends:
--            criterion ==1.*
--
--    if impl(ghc <7.8)
--        build-depends:
--            criterion ==0.6.*,
--            hastache <0.6,
--            statistics <0.11
--    type: exitcode-stdio-1.0
--    main-is: Bench.hs
--    build-depends:
--        base -any,
--        color -any
--    default-language: Haskell2010
--    hs-source-dirs: benchmark
